--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .home__video {
   width: 100%;
   margin-bottom: 12%; }
@@ -377,61 +378,103 @@
       position: absolute;
       background-color: #222635;
       width: 100%;
-      height: 37vh; }
+      height: 37vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
       .modos__container__foto__info {
         padding: 2rem; }
         .modos__container__foto__info h1 {
-          font-size: 3rem;
+          font-size: 4.5rem;
           color: white;
           text-align: center;
           padding-bottom: 1rem; }
-        .modos__container__foto__info p {
-          font-size: 1.2rem;
-          color: white;
-          text-align: center; }
-  .modos__data {
-    background-color: #27493f;
-    padding: 5rem; }
-    .modos__data h2 {
-      text-align: center;
+
+.land {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  padding: 2rem 0;
+  background: url(https://cdn.axieinfinity.com/assets/images/3ebf5e8….png) center 15px/499px 39px repeat-x, url(https://cdn.axieinfinity.com/assets/images/3ebf5e8….png) center calc(100% - 15px)/499px 39px repeat-x, linear-gradient(to right top, #39472e, #254941);
+  color: white; }
+  .land__container {
+    width: 1024px; }
+    .land__container h2 {
       font-size: 3rem;
-      margin-bottom: 20px; }
-    .modos__data p {
-      font-size: 1.2rem;
-      margin-bottom: 50px;
       text-align: center; }
-    .modos__data__info {
+    .land__container p {
+      font-size: 1.5rem;
+      margin-top: 1rem; }
+    .land__container__img {
       display: flex;
-      align-items: center;
+      align-items: center; }
+      .land__container__img img {
+        width: 100%; }
+
+.mochileros {
+  background-color: #663518;
+  display: flex;
+  justify-content: center;
+  padding: 2rem 0rem; }
+  .mochileros__container {
+    width: 1024px; }
+    .mochileros__container__top {
+      display: flex;
       justify-content: center; }
+      .mochileros__container__top img {
+        width: 60%; }
+    .mochileros__container__mid {
+      color: white;
+      padding-top: 1rem; }
+      .mochileros__container__mid h2 {
+        text-align: center;
+        font-size: 3rem; }
+      .mochileros__container__mid p {
+        font-size: 1.5rem;
+        padding: 1rem 0rem; }
+    .mochileros__container__bot {
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 1rem; }
+      .mochileros__container__bot div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between; }
+        .mochileros__container__bot div div {
+          height: 83px; }
+
+.pve {
+  background: url(https://cdn.axieinfinity.com/assets/images/4859aaa….png) center 15px/320px 40px repeat-x, url(https://cdn.axieinfinity.com/assets/images/4859aaa….png) center calc(100% - 15px)/320px 40px repeat-x, linear-gradient(to right top, #5f1712, #571a3c);
+  display: flex;
+  justify-content: center; }
+  .pve__container {
+    width: 1024px;
+    color: white; }
+    .pve__container div {
+      padding: 0.5rem 0;
+      align-items: center; }
+    .pve__container h2 {
+      font-size: 3rem; }
+    .pve__container p {
+      font-size: 1.3rem; }
+    .pve__container__mid {
+      display: flex; }
+      .pve__container__mid h2, .pve__container__mid p {
+        text-align: end; }
+    .pve__container__bot {
+      display: flex; }
 
 @media only screen and (max-width: 1024px) {
-  .titulo__juego {
-    width: 150px;
-    margin-left: auto;
-    margin-right: auto; }
-  .titulo__juego__nuevo {
-    font-size: 2.0rem;
-    width: 330px; }
-  .p__mjuego {
-    width: 500px;
-    margin-left: auto;
-    margin-right: auto; }
-  .yout__vid {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%; } }
+  .pve__container img {
+    display: none; } }
 
-@media only screen and (max-width: 1024px) and (max-width: 766px) {
-  .titulo__juego {
-    width: 100px; }
-  .titulo__juego__nuevo {
-    width: 250px; }
-  .p__mjuego {
-    width: 360px;
-    text-align: center; }
-  .yout__vid {
-    margin-bottom: 100px; } }
+@media only screen and (max-width: 1024px) and (max-width: 720px) {
+  .land {
+    padding: 2rem 0.3rem; }
+  .land__container__img {
+    flex-direction: column; } }
 
 /* menu */
 .header {
