--- a/scss/views/_modosdejuego.scss
+++ b/scss/views/_modosdejuego.scss
@@ -21,83 +21,143 @@
             background-color: #222635;
             width: 100%;
             height: 37vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             &__info {
                 padding: 2rem;
                 & h1 {
-                    font-size: 3rem;
+                    font-size: 4.5rem;
                     color: white;
                     text-align: center;
                     padding-bottom: 1rem;
                 }
-                & p {
-                    font-size: 1.2rem;
-                    color: white;
-                    text-align: center;
+            }
+        }
+    }
+    
+}
+
+.land {
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0;
+    background: url(https://cdn.axieinfinity.com/assets/images/3ebf5e8….png) center 15px / 499px 39px repeat-x, url(https://cdn.axieinfinity.com/assets/images/3ebf5e8….png) center calc(100% - 15px) / 499px 39px repeat-x, linear-gradient(to right top, rgb(57, 71, 46), rgb(37, 73, 65));
+    color: white;
+    &__container {
+        width: 1024px;
+        & h2 {
+          font-size: 3rem; 
+          text-align: center; 
+        }
+        & p {
+          font-size: 1.5rem;
+          margin-top: 1rem;  
+        }
+        &__img {
+            display: flex;
+            align-items: center;
+
+            & img {
+                width: 100%;
+                
+            }
+
+        }
+    }
+}
+
+.mochileros {
+    background-color: #663518;
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0rem;
+    &__container {
+        width: 1024px;
+        &__top {
+            display: flex;
+            justify-content: center;
+            & img {
+                width: 60%;
+            }
+        }
+        &__mid {
+            color: white;
+            padding-top: 1rem;
+            & h2 {
+                text-align: center;
+                font-size: 3rem;
+            }
+            & p {
+                font-size: 1.5rem;
+                padding: 1rem 0rem;
+            }
+        }
+        &__bot {
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-top: 1rem;
+            & div {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                & div {
+                    height: 83px;
                 }
             }
         }
     }
-    &__data {
-        background-color: #27493f;
-        padding: 5rem;
+    
+}
+
+.pve {
+    background: url(https://cdn.axieinfinity.com/assets/images/4859aaa….png) center 15px / 320px 40px repeat-x, url(https://cdn.axieinfinity.com/assets/images/4859aaa….png) center calc(100% - 15px) / 320px 40px repeat-x, linear-gradient(to right top, rgb(95, 23, 18), rgb(87, 26, 60));
+    display: flex;
+    justify-content: center;
+    &__container {
+        width: 1024px;
+        color: white;
+        & div {
+            padding: 0.5rem 0;
+            align-items: center;
+        }
         & h2 {
-            text-align: center;
             font-size: 3rem;
-            margin-bottom: 20px;
-            
         }
         & p {
-            font-size: 1.2rem;
-            margin-bottom: 50px;
-            text-align: center;
-            
+            font-size: 1.3rem;
         }
-        &__info {
+        &__mid {
             display: flex;
-            align-items: center;
-            justify-content: center;
+            & h2, p {
+                text-align: end;
+            }
             
         }
-        
+        &__bot {
+            display: flex;
+        }
     }
+    
 }
 
 
+    @media only screen and (max-width:1024px){
+        .pve__container img {
+            display: none;
+        }
+          
+        @media only screen and (max-width:720px){
+            .land {
+                padding: 2rem 0.3rem;
+            }
+           .land__container__img {
+               flex-direction: column;
+           } 
+        }
+    }
 
-@media only screen and (max-width:1024px){
-    .titulo__juego{
-        width: 150px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .titulo__juego__nuevo{
-        font-size: 2.0rem;
-        width: 330px;
-    }
-    .p__mjuego{
-        width: 500px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .yout__vid{
-        width: 80%;
-        margin-left: 10%;
-        margin-right: 10%;
-        
-    }
-    @media only screen and (max-width:766px){
-        .titulo__juego{
-            width: 100px;
-        }
-        .titulo__juego__nuevo{
-            width: 250px;
-        }
-        .p__mjuego{
-            width: 360px;
-            text-align: center;
-        }
-        .yout__vid{
-            margin-bottom: 100px;
-        }
-    }
-}
+
